2010-10-02  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that FtpFinishDownloadCommand does not handle
	timeout. This means it waits for the remote server to send "226
	Transfer Complete" message *without* its own timeout until the
	remote server shutdowns connection(we can detect EOF in this
	case).
	* src/AbstractCommand.h
	* src/FtpFinishDownloadCommand.cc

2010-10-02  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Code cleanup util::percentEncode()
	* src/util.cc

2010-10-02  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Made string literal static std::string in
	util::detectDirTraversal().
	* src/util.cc

2010-10-02  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Rewritten util::escapePath(). Now it does not replace bad chars:it
	performs percent-encode against them.  util::fixTaintedBasename()
	now replaces "/" with "%2F".  Added 0x7f as bad chars in
	util::detectDirTraversal().
	* src/util.cc
	* test/UtilTest.cc

2010-10-02  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Non-UTF8 filenames are now percent-encoded.  For example, filename
	for http://example.org/%90%A2%8AE will be %90%A2%8AE because it is
	Shift_JIS. The comments and name in .torrent file in XML-RPC
	response are percent-encoded if they are not UTF-8.
	* src/FtpNegotiationCommand.cc
	* src/HttpRequestCommand.cc
	* src/HttpResponseCommand.cc
	* src/XmlRpcMethodImpl.cc
	* src/bittorrent_helper.cc
	* src/util.cc
	* src/util.h
	* test/BittorrentHelperTest.cc
	* test/UtilTest.cc

2010-09-26  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed TripletGet as TupleGet. Renamed TripletNthType as
	TupleNthType. Renamed Triplet2Pair as Tuple2Pair.
	* src/RequestGroupMan.cc
	* src/Triplet.h
	* test/TripletTest.cc

2010-09-26  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use class instead of typename for Triplet template parameter.
	* src/Triplet.h
